# let-flow

./: .env.development  .gitignore  .prettierrc  Cargo.toml  README.md  dapr.yaml  generator.sh  nx.json  package.json  pg-docker.session.sql  pnpm-lock.yaml  requirements.txt  tsconfig.base.json
.husky/: pre-commit
apps/airflow/: Cargo.toml  jest.config.ts  project.json  tsconfig.app.json  webpack.config.js
apps/airflow-e2e/: jest.config.ts  project.json
apps/airflow/src/: main.rs  main.ts
apps/airflow/src/app/: app.module.ts
apps/airflow/src/common/crypto/: crypto.module.js  crypto.module.js.map
apps/airflow/src/common/crypto/bcrypt/: bcrypt.service.js  bcrypt.service.js.map  bcrypt.service.ts
apps/airflow/src/modules/user/: user.controller.ts  user.dto.ts  user.module.ts  user.service.ts
apps/airflow/src/v1/: mod.rs
apps/microflow/#user/: jest.config.ts  (+1 more)
apps/server/: .env  Cargo.toml  project.json
apps/server/src/: jwt.rs  lib.rs  main.rs
apps/server/src/db/: collection.rs  schema.rs
apps/server/src/v1/: mod.rs  session.rs  user.rs
apps/server/src/v1/session/: mod.rs  schema.rs  session.rs
apps/server/src/v1/user/: schema.rs  user.rs
apps/service/: project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
apps/ui/: .eslintignore  .eslintrc.cjs  .lintstagedrc.mjs  app.vue  auto-imports.d.ts  components.d.ts  error.vue  i18n.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  project.json
apps/uiflow/: README.md  app.vue  nuxt.config.ts  package.json  project.json
docker/: docker-compose.yml  scheme.sql
k8s/: redis.config.yaml  redis.deploy.yaml  redis.ingress.yaml  test.py
k8s/mongodb/: values.yaml
k8s/postgresql/: values.yaml
k8s/redis/: values.yaml
(+44 files in other folders)
