[package]
name = "airflow"
version = "0.1.0"
edition = "2021"
authors = ["miaobuao <miaobuao@outlook.com>"]

[dependencies]
axum = "0.7"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }
utoipa-redoc = { version = "2", features = ["axum"] }
utoipa-rapidoc = { version = "2", features = ["axum"] }
